--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
         <a class="navbar-brand" href="/">Remindly</a>
-        <a href="/login" class="btn btn-primary">Sign In</a>
+        <a href="/auth/login" class="btn btn-primary">Sign In</a>
       </div>
     </nav>
 
@@ -33,10 +33,10 @@
             <h1 class="mb-5">A simple way to organize your life.</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
+            <form action="/auth/register" method="GET">
               <div class="form-row">
                 <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                  <input type="email" name="email" class="form-control form-control-lg" placeholder="Enter your email...">
                 </div>
                 <div class="col-12 col-md-3">
                   <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
